--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
       href="https://fonts.googleapis.com/css?family=Montserrat|Roboto"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="fontello/css/fontello.css" type="text/css" />
   </head>
 
   <body>
@@ -113,7 +107,7 @@
         <div class="section-start-content">
           <i class="material-icons board-icon">collections_bookmark</i>
           <p class="board-content-efect">
-            <b>Nudne posiłki to już przeszłość</b> <br/ >
+            <b>Nudne posiłki to już przeszłość</b> <br />
             <span class="small-text"
               >aplikacja z szeroką bazą produktów/potraw podpowie ci nowe
               pomysły na obiad!</span
@@ -165,7 +159,7 @@
         <div class="section-start-content">
           <i class="material-icons board-icon">favorite</i>
           <p class="board-content-efect">
-            <b>Trenujesz, jesteś aktywny?</b> <br/ >
+            <b>Trenujesz, jesteś aktywny?</b> <br />
             <span class="small-text"
               >Chciałbyś widzieć swoje raporty pokazujące ilość zjedzonych
               kalorii - system ci to umożliwi</span
@@ -176,7 +170,7 @@
         <div class="section-start-content">
           <i class="material-icons board-icon">watch_later</i>
           <p class="board-content-efect">
-            <b>Jesteś alergikiem?</b> <br/ >
+            <b>Jesteś alergikiem?</b> <br />
             <span class="small-text"
               >Nie martw się. Od dziś możesz jeść bez obaw, ponieważ aplikacja
               podpowie ci, na jakie produkty/dania powinieneś uważać</span
@@ -204,25 +198,36 @@
         <div class="section-field">
           <div class="section-queries">
             <div class="section-title">JEŚLI....</div>
-            <li><i class="icon-check"></i>Prowadzisz siedzący tryb życia?</li>
             <li>
-              <i class="icon-check"></i>Twoja aktywność jest bardzo ograniczona?
+              <i class="material-icons"> check </i>Prowadzisz siedzący tryb
+              życia?
             </li>
             <li>
-              <i class="icon-check"></i>
-              Chciałbyś zrzucić zbędne kilogramy, ponieważ zdałeś sobie sprawę,
-              że wpływają one nie tylko twoją samoocenę, sylwetkę, ale przede
-              wszystkim na zdrowie?
+              <i class="material-icons"> check </i>Twoja aktywność jest bardzo
+              ograniczona?
             </li>
             <li>
-              <i class="icon-check"></i>
+              <i class="material-icons">
+                check
+              </i>
+              <b>Chciałbyś zrzucić zbędne kilogramy</b>, ponieważ zdałeś sobie
+              sprawę, że wpływają one nie tylko twoją samoocenę, sylwetkę, ale
+              przede wszystkim na zdrowie?
+            </li>
+            <li>
+              <i class="material-icons">
+                check
+              </i>
               Chciałbyś wiedzieć, co możesz zjeść, a co powinieneś unikać?
             </li>
             <li>
-              <i class="icon-check"></i>Nie masz czasu na wizyty u dietetyczki?
+              <i class="material-icons"> check </i>Nie masz czasu na wizyty u
+              dietetyczki?
             </li>
             <li>
-              <i class="icon-check"></i>
+              <i class="material-icons">
+                check
+              </i>
               Nie chcesz jeść tych samych monotonnych posiłków, które będą Ci
               ciągle przypominać, że jesteś na diecie?
             </li>
@@ -249,17 +254,24 @@
           <div class="section-queries">
             <div class="section-title">JEŚLI....</div>
             <li>
-              <i class="icon-check"></i>Jesteś aktywny, dbasz o swoje zdrowie i
-              sylwetkę? A może dopiero zaczynasz swoją przygodę ze sportem?
+              <i class="material-icons"> check </i
+              ><b
+                >Jesteś aktywny, dbasz o swoje zdrowie i sylwetkę? A może
+                dopiero zaczynasz swoją przygodę ze sportem?</b
+              >
             </li>
             <li>
-              <i class="icon-check"></i>
+              <i class="material-icons">
+                check
+              </i>
               Chciałbyś w wygodny nieskomplikowany sposób liczyć ilość
               spożywanych kalorii oraz wartości odżywczych? Ale brak ci
               kreatywności do tworzenia smacznych posiłków?
             </li>
             <li>
-              <i class="icon-check"></i>
+              <i class="material-icons">
+                check
+              </i>
               Chciałbyś mieć pełny wgląd w swoje szczegółowe statystyki
               spożytych kaloriii, które będą zaprezentowane w sposób czytelny i
               estetyczny?
@@ -298,28 +310,37 @@
           <div class="section-queries">
             <div class="section-title">JEŚLI....</div>
             <li>
-              <i class="icon-check"></i>Jesteś alergikiem lub wege? A może
-              jesteś na diecie zdrowotnej?
+              <i class="material-icons"> check </i
+              ><b
+                >Jesteś alergikiem lub wege? A może jesteś na diecie
+                zdrowotnej?</b
+              >
             </li>
             <li>
-              <i class="icon-check"></i>Chciałbyś mieć zróżnicowaną i smaczną
-              dietę, nie martwiąc się, czy dany produkt zawarty w potrawie jest
-              dla Ciebie dozwolony czy nie?
+              <i class="material-icons"> check </i>Chciałbyś mieć zróżnicowaną i
+              smaczną dietę, nie martwiąc się, czy dany produkt zawarty w
+              potrawie jest dla Ciebie dozwolony czy nie?
             </li>
             <li>
-              <i class="icon-check"></i>Chciałbyś mieć gotowe potrawy, do
-              których będziesz mieć dostęp za pomocą jednego kliknięcia?
+              <i class="material-icons"> check </i>Chciałbyś mieć gotowe
+              potrawy, do których będziesz mieć dostęp za pomocą jednego
+              kliknięcia?
             </li>
             <li>
-              <i class="icon-check"></i>
+              <i class="material-icons">
+                check
+              </i>
               Chcesz poprawić swój komfort życia, a przy okazji zaoszczędzić
               czas na szukanie pomysłów w internecie lub książkach?
             </li>
             <li>
-              <i class="icon-check"></i>Nie masz czasu na wizyty u dietetyczki?
+              <i class="material-icons"> check </i>Nie masz czasu na wizyty u
+              dietetyczki?
             </li>
             <li>
-              <i class="icon-check"></i>
+              <i class="material-icons">
+                check
+              </i>
               Chcesz uniknąć wyłamania się z diety, ponieważ nie wiesz co zjeść?
             </li>
           </div>
@@ -337,23 +358,37 @@
       </div>
     </div>
 
-    <div class="newsletter">
-      <div class="newletter-icon"><i class="icon-mail"></i></div>
-      <div class="newsletter-content">
-        Testuj fastfooda za darmo, sprawdź jego możliwości i ciesz się
-        samodzielną łatwością układania diety dla Ciebie<br/ > Zostaw swojego
-        maila. Zapisz się do Newslettera
+    <div class="footer">
+      <div class="newsletter">
+        <div class="newletter-icon">
+          <i class="material-icons icon-newsletter">
+            mail
+          </i>
+        </div>
+        <div class="newsletter-content">
+          <p>
+            Testuj fastfooda za darmo, sprawdź jego możliwości i ciesz się
+            samodzielną łatwością układania diety dla Ciebie
+          </p>
+          <p class="newsletter-mail">
+            Zostaw swojego maila. Zapisz się do Newslettera
+          </p>
+        </div>
       </div>
-    </div>
 
-    <div class="panel">
-      <div class="row">
-        <form class="col s12">
-          <div class="row">
-            <div class="input-field col s6">
-              <input id="icon_prefix" type="text" class="validate" />
-              <label for="icon_prefix">Mail</label>
-            </div>
+      <div class="panel">
+        <form action="#" class="panel-mail">
+          <label class="input-mail-name" for="mail">E-mail:</label>
+          <input
+            type="text"
+            id="mail"
+            name="email"
+            placeholder="Wpisz swojego maila"
+            class="input-mail-field"
+          />
+
+          <div class="input-mail-submit btn-hover" type="submit" value="Submit">
+            WYŚLIJ
           </div>
         </form>
       </div>
