--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="hover.css" type="text/css" />
+    <link rel="stylesheet" href="animate.css" type="text/css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat|Roboto"
+      href="https://fonts.googleapis.com/css?family=Montserrat|Roboto|Libre+Franklin"
       rel="stylesheet"
     />
 
@@ -84,7 +85,7 @@
       </div>
 
       <div class="section-start-field">
-        <div class="section-start-content ">
+        <div class="section-start-content">
           <i class="material-icons board-icon">watch_later</i>
           <p class="board-content-efect">
             <b>Oszczędzasz czas</b><br />
