--- a/index.html
+++ b/index.html
@@ -187,6 +187,104 @@
       </a>
     </div>
 
+    <!--CO DAJE FAST FOOD-->
+
+    <div class="summary-board">
+      <div class="section-start-title summary-title">
+        Czego się dowiesz z Fast Fooda?
+      </div>
+
+      <div class="summary-basic-inf">
+        <span class="summary-subtitle">Poznasz nowe przepisy na posiłki</span>
+        <span class="summary-basic-inf-name"
+          >Naleśniki z jagodami i nutellą</span
+        >
+        <span summary-basic-inf-time
+          ><i class="material-icons">access_time</i>
+          <span class="summary-basic-inf-time">1 h 30 min</span></span
+        >
+        <span class="summmary-basic-inf-ingredients">
+          <li>1 szklanka mąki pszennej</li>
+          <li>2 jajka</li>
+          <li>1 szklanka mleka</li>
+          <li>3/4 szklanki wody (najlepiej gazowanej)</li>
+          <li>szczypta soli</li>
+          <li>3 łyżki masła lub oleju roślinnego</li>
+        </span>
+
+        <span class="summary-basic-inf-description">
+          <p>
+            Mąkę wsypać do miski, dodać jajka, mleko, wodę i sól. Zmiksować na
+            gładkie ciasto. Dodać roztopione masło lub olej roślinny i razem
+            zmiksować (lub wykorzystać tłuszcz do smarowania patelni przed
+            smażeniem każdego naleśnika).
+          </p>
+
+          <p>
+            Naleśniki smażyć na dobrze rozgrzanej patelni z cienkim dnem np.
+            naleśnikowej. Przewrócić na drugą stronę gdy spód naleśnika będzie
+            już ładnie zrumieniony i ścięty.
+          </p>
+        </span>
+      </div>
+
+      <div class="summary-data-field">
+        <div>
+          <span class="summary-subtitle"
+            >Dowiesz się, ile i czego spożyłeś</span
+          >
+        </div>
+        <div class="summary-data">
+          <div class="sumary-data-content">
+            <span class="summary-data-content-name">Energia, kcal</span>
+            <span class="summary-data-content-value">1 234</span>
+          </div>
+
+          <div class="sumary-data-content">
+            <span class="summary-data-content-name">Białka, g</span>
+            <span class="summary-data-content-value">260</span>
+          </div>
+
+          <div class="sumary-data-content">
+            <span class="summary-data-content-name">Węglowodany, g</span>
+            <span class="summary-data-content-value">345</span>
+          </div>
+
+          <div class="sumary-data-content">
+            <span class="summary-data-content-name">Tłuszcze, g</span>
+            <span class="summary-data-content-value">560</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="summary-plan">
+        <div>
+          <span class="summary-subtitle">Twoje plany żywieniowe</span>
+        </div>
+
+        <div class="summary-plan-list">
+          <li>
+            <i class="material-icons summary-list-icon">
+              fastfood
+            </i>
+            Plan na masę
+          </li>
+          <li>
+            <i class="material-icons summary-list-icon">
+              favorite_border
+            </i>
+            Plan na odchudzanie
+          </li>
+          <li>
+            <i class="material-icons summary-list-icon">
+              grade
+            </i>
+            Plan na lato
+          </li>
+        </div>
+      </div>
+    </div>
+
     <!--TWOJA WAGA W TWOICH RĘKACH-->
 
     <div class="section-overlay section-overlay-persona1" id="slimming">
@@ -392,67 +490,6 @@
             WYŚLIJ
           </div>
         </form>
-      </div>
-    </div>
-
-    <div class="summary-board">
-      <div class="section-start-title summary-title">
-        Czego się dowiesz z Fast Fooda?
-      </div>
-
-      <div class="summary-basic-inf">
-        <span class="summary-basic-inf-name"
-          >Naleśniki z jagodami i nutellą</span
-        >
-        <span summary-basic-inf-time
-          ><i class="material-icons">access_time</i>
-          <span class="summary-basic-inf-time">1 h 30 min</span></span
-        >
-        <span class="summmary-basic-inf-ingredients">
-          <li>1 szklanka mąki pszennej</li>
-          <li>2 jajka</li>
-          <li>1 szklanka mleka</li>
-          <li>3/4 szklanki wody (najlepiej gazowanej)</li>
-          <li>szczypta soli</li>
-          <li>3 łyżki masła lub oleju roślinnego</li>
-        </span>
-
-        <span class="summary-basic-inf-description">
-          <p>
-            Mąkę wsypać do miski, dodać jajka, mleko, wodę i sól. Zmiksować na
-            gładkie ciasto. Dodać roztopione masło lub olej roślinny i razem
-            zmiksować (lub wykorzystać tłuszcz do smarowania patelni przed
-            smażeniem każdego naleśnika).
-          </p>
-
-          <p>
-            Naleśniki smażyć na dobrze rozgrzanej patelni z cienkim dnem np.
-            naleśnikowej. Przewrócić na drugą stronę gdy spód naleśnika będzie
-            już ładnie zrumieniony i ścięty.
-          </p>
-        </span>
-      </div>
-
-      <div class="summary-data">
-        <div class="sumary-data-content">
-          <span class="summary-data-content-name">Energia, kcal</span>
-          <span class="summary-data-content-value">1 234</span>
-        </div>
-
-        <div class="sumary-data-content">
-          <span class="summary-data-content-name">Białka, g</span>
-          <span class="summary-data-content-value">260</span>
-        </div>
-
-        <div class="sumary-data-content">
-          <span class="summary-data-content-name">Węglowodany, g</span>
-          <span class="summary-data-content-value">345</span>
-        </div>
-
-        <div class="sumary-data-content">
-          <span class="summary-data-content-name">Tłuszcze, g</span>
-          <span class="summary-data-content-value">560</span>
-        </div>
       </div>
     </div>
 
