--- a/index.html
+++ b/index.html
@@ -196,13 +196,14 @@
 
       <div class="summary-basic-inf">
         <span class="summary-subtitle">Poznasz nowe przepisy na posiłki</span>
+
         <span class="summary-basic-inf-name"
           >Naleśniki z jagodami i nutellą</span
         >
-        <span summary-basic-inf-time
-          ><i class="material-icons">access_time</i>
-          <span class="summary-basic-inf-time">1 h 30 min</span></span
-        >
+        <div class="summary-basic-inf-time-field">
+          <i class="material-icons summary-basic-inf-icon">access_time</i>
+          <span class="summary-basic-inf-time">1 h 30 min</span>
+        </div>
         <span class="summmary-basic-inf-ingredients">
           <li>1 szklanka mąki pszennej</li>
           <li>2 jajka</li>
