ordering the code

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </li>
       </a>
 
-      <div class="button">WYPRÓBUJ WERSJĘ PRÓBNĄ</div>
+      <div class="button greater-text">WYPRÓBUJ WERSJĘ PRÓBNĄ</div>
     </div>
     <div class="topbar">
       <div class="topbar-content">
@@ -80,14 +80,14 @@
     <!-- PLANSZA CO TO JEST FAST FOOD-->
 
     <div class="section-start" id="about">
-      <div class="section-start-title">
+      <div class="section-title">
         Co daje aplikacja żywieniowa Fast Food?
       </div>
 
       <div class="section-start-field">
         <div class="section-start-content">
           <i class="material-icons board-icon">watch_later</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Oszczędzasz czas</b><br />
             <span class="small-text"
               >Krótszy czas między półkami w markecie, żadnych kolejek u
@@ -98,7 +98,7 @@
 
         <div class="section-start-content">
           <i class="material-icons board-icon">favorite</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Jesz to co lubisz.</b><br />
             <span class="small-text">
               Cieszysz się pysznym, zdrowym i ulubionym jedzeniem!</span
@@ -107,7 +107,7 @@
         </div>
         <div class="section-start-content">
           <i class="material-icons board-icon">collections_bookmark</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Nudne posiłki to już przeszłość</b> <br />
             <span class="small-text"
               >aplikacja z szeroką bazą produktów/potraw podpowie ci nowe
@@ -118,7 +118,7 @@
 
         <div class="section-start-content">
           <i class="material-icons board-icon">fastfood</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Liczenie kalorii staje się przeszłością </b> <br />
             <span class="small-text">Aplikacja liczy je za ciebie</span>
           </p>
@@ -126,7 +126,7 @@
 
         <div class="section-start-content">
           <i class="material-icons board-icon">person_pin</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Samodzielne układanie diety</b><br />
             <span class="small-text"> bez ingerencji dietetyka</span>
           </p>
@@ -134,7 +134,7 @@
 
         <div class="section-start-content">
           <i class="material-icons board-icon">phone_android</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Estetyczny wygląd, prosta nieskomplikowana nawigacja </b> <br />
             <span class="small-text"> każdy się odnajdzie!</span>
           </p>
@@ -145,11 +145,11 @@
     <!--DLA KOGO-->
 
     <div class="section-start for-whom">
-      <div class="section-start-title">Dla kogo Fast Food?</div>
+      <div class="section-title">Dla kogo Fast Food?</div>
       <div class="section-start-field">
         <div class="section-start-content">
           <i class="material-icons board-icon">stars</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Odchudasz się?</b><br />
             <span class="small-text"
               >Chciałbyś zrzucić zbędne kilogramy? Znowu lekko i dobrze poczuć
@@ -159,7 +159,7 @@
         </div>
         <div class="section-start-content">
           <i class="material-icons board-icon">favorite</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Trenujesz, jesteś aktywny?</b> <br />
             <span class="small-text"
               >Chciałbyś widzieć swoje raporty pokazujące ilość zjedzonych
@@ -170,7 +170,7 @@
 
         <div class="section-start-content">
           <i class="material-icons board-icon">watch_later</i>
-          <p class="board-content-efect">
+          <p class="board-content-efect greater-text">
             <b>Jesteś alergikiem?</b> <br />
             <span class="small-text"
               >Nie martw się. Od dziś możesz jeść bez obaw, ponieważ aplikacja
@@ -184,12 +184,12 @@
     <!--CO DAJE FAST FOOD-->
 
     <div class="summary-board">
-      <div class="section-start-title summary-title">
+      <div class="section-title ">
         Czego się dowiesz z Fast Fooda?
       </div>
 
       <div class="summary-basic-inf">
-        <span class="summary-subtitle">Poznasz nowe przepisy na posiłki</span>
+        <span class="summary-subtitle small-text">Poznasz nowe przepisy na posiłki</span>
 
         <span class="summary-basic-inf-name"
           >Naleśniki z jagodami i nutellą</span
@@ -225,7 +225,7 @@
 
       <div class="summary-data-field">
         <div>
-          <span class="summary-subtitle"
+          <span class="summary-subtitle small-text"
             >Dowiesz się, ile i czego spożyłeś</span
           >
         </div>
@@ -254,7 +254,7 @@
 
       <div class="summary-plan">
         <div>
-          <span class="summary-subtitle">Twoje plany żywieniowe</span>
+          <span class="summary-subtitle small-text">Twoje plany żywieniowe</span>
         </div>
 
         <div class="summary-plan-list">
@@ -290,8 +290,8 @@
       </div>
       <div class="section-content">
         <div class="section-field">
-          <div class="section-queries">
-            <div class="section-title">JEŚLI....</div>
+          <div class="section-queries greater-text">
+            <div class="section-title-query">JEŚLI....</div>
             <li>
               <i class="material-icons"> check </i>Prowadzisz siedzący tryb
               życia?
@@ -345,8 +345,8 @@
     <div class="section-overlay section-overlay-persona2" id="mass">
       <div class="section-content section-content-persona2">
         <div class="section-field">
-          <div class="section-queries">
-            <div class="section-title">JEŚLI....</div>
+          <div class="section-queries greater-text">
+            <div class="section-title-query">JEŚLI....</div>
             <li>
               <i class="material-icons"> check </i
               ><b
@@ -401,8 +401,8 @@
       </div>
       <div class="section-content">
         <div class="section-field">
-          <div class="section-queries">
-            <div class="section-title">JEŚLI....</div>
+          <div class="section-queries greater-text">
+            <div class="section-title-query">JEŚLI....</div>
             <li>
               <i class="material-icons"> check </i
               ><b
@@ -464,7 +464,7 @@
             Testuj fastfooda za darmo, sprawdź jego możliwości i ciesz się
             samodzielną łatwością układania diety dla Ciebie
           </p>
-          <p class="newsletter-mail">
+          <p class="newsletter-mail greater-text">
             Zostaw swojego maila. Zapisz się do Newslettera
           </p>
         </div>
@@ -481,6 +481,7 @@
             class="input-mail-field"
           />
 
+
           <div class="input-mail-submit btn-hover" type="submit" value="Submit">
             WYŚLIJ
           </div>
@@ -489,7 +490,7 @@
     </div>
 
     <div class="gallery-field">
-      <div class="section-start-title">
+      <div class="section-title">
         Co dobrego znajdziesz w Fast Foodzie?
       </div>
       <div class="gallery">
@@ -498,7 +499,6 @@
         <div class="gallery-img"></div>
         <div class="gallery-img"></div>
       </div>
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
