ordering the code

--- a/index.html
+++ b/index.html
@@ -459,8 +459,8 @@
             mail
           </i>
         </div>
-        <div class="newsletter-content">
-          <p>
+        <div class="newsletter-content greater-text">
+          <p >
             Testuj fastfooda za darmo, sprawdź jego możliwości i ciesz się
             samodzielną łatwością układania diety dla Ciebie
           </p>
