--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="hover.css" type="text/css" />
     <link rel="stylesheet" href="animate.css" type="text/css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat|Roboto|Libre+Franklin"
+      href="https://fonts.googleapis.com/css?family=Libre+Franklin|Lato|Montserrat|Karla|Mukta"
       rel="stylesheet"
     />
 
@@ -162,7 +162,7 @@
           </p>
         </div>
         <div class="section-start-content">
-          <i class="material-icons board-icon">favorite</i>
+          <i class="material-icons board-icon icon-for-whom">favorite</i>
           <p class="board-content-efect greater-text">
             <b>Trenujesz, jesteś aktywny?</b> <br />
             <span class="small-text"
@@ -173,7 +173,7 @@
         </div>
 
         <div class="section-start-content">
-          <i class="material-icons board-icon">watch_later</i>
+          <i class="material-icons board-icon icon-for-whom">watch_later</i>
           <p class="board-content-efect greater-text">
             <b>Jesteś alergikiem?</b> <br />
             <span class="small-text"
@@ -188,7 +188,7 @@
     <!--CO DAJE FAST FOOD-->
 
     <div class="summary-board">
-      <div class="section-title white-text">
+      <div class="section-title section-title-background">
         Czego się dowiesz z Fast Fooda?
       </div>
 
@@ -386,7 +386,7 @@
             </li>
           </div>
 
-          <div class="section-description">
+          <div class="section-description section-description-persona2">
             Fast food to aplikacja, która powstała z myślą o osobach, które są
             aktywne, dbają o swoje zdrowie i sylwetkę albo pragną zmienić coś w
             swoim dotychczasowym trybie życia. Dzięki temu osoby już aktywne
@@ -508,6 +508,8 @@
       </div>
     </footer>
 
+    <!--
+
     <div class="gallery-field">
       <div class="section-title">
         Co dobrego znajdziesz w Fast Foodzie?
@@ -518,7 +520,7 @@
         <div class="gallery-img"></div>
         <div class="gallery-img"></div>
       </div>
-    </div>
+    </div> -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
