--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
       </div>
     </div>
 
+    <div class="app-preview">
+      <div class="preview-element"></div>
+      <div class="preview-element"></div>
+      <div class="preview-element"></div>
+      <div class="preview-element"></div>
+    </div>
+
     <!-- PLANSZA CO TO JEST FAST FOOD-->
 
     <div class="section-start" id="about">
@@ -146,7 +153,9 @@
       </div>
     </div>
 
-    <div class="tlo"></div>
+    <!--
+
+    <div class="tlo"></div> -->
 
     <!--DLA KOGO-->
 
